profile.css
body {
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    display: grid;
    place-content: center;
    background-color: #2d3235 !important;
    position: relative;
}

.background{
    position: absolute;
    height: 100%;
    width: 100%;
    z-index: -1;
}

.background .square{
    position: absolute;
    background-color: #CC5500;
    height: 800px;
    width: 800px;
    bottom: -25rem;
    transform: rotate(45deg);
}

.square.two{

}

.upload {
    color: white;
    margin-bottom: 25px;
    align-items: center;
    box-shadow: 0px 8px 20px black;
    border-radius: 14px;
    overflow: hidden;
    background-color: #313742;
    height: fit-content;
}

.upload .input-table {
    display: flex;
    margin: 3rem;
}

.upload .input-table tbody {
    display: flex;
}

.upload .input-table tr {
    display: flex;
    flex-direction: column;
    padding: 1rem;
}

.upload .upload-header {
    text-align: center;
    margin: 1rem;
}

.upload .text, .upload .input {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    height: 100%;
}

.upload .text span, .upload .input input {
    margin-bottom: 10px;
    height: 25%;
}

.upload .text span {
    line-height: 2;
}

.profile {
    width: 300px;
    box-shadow: 0px 8px 20px black;
    border-radius: 14px;
    position: relative;
    overflow: hidden;
}

.line {
    margin: 15px 0;
    border: none;
    border-top: 1px solid #565d6b;
}

.container-fluid {
    height: 100%;
    width: 100%;
}

.row {
    height: 50%;
    width: 100%;
}

.top .profile-pic {
    width: 100%;
    display: grid;
    place-content: center;
    z-index: 5;
    padding: 1rem;
}

.top .profile-pic img {
    height: 100px;
    width: 100px;
    object-fit: cover;
    border-radius: 5px;
    z-index: 5;
}

.top .content {
    width: 100%;
    z-index: 1;
}

.top .content .name input {
    border: none;
    text-align: center;
    background-color: transparent;
    color: #3D4B56;
    text-shadow: 0 0 3px #000, 0 0 3px #000;
    font-size: 25px;
    width: 100%;
    padding: 0 1rem;
}

.top .content .name input:focus {
    outline: none;
}

.top .content .name {
    z-index: 5;
}

.top .content .roles {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 12px;
    z-index: 5;
    padding: .5rem;
}

.top .content .roles .role-1 {
    height: 55%;
    width: 42%;
    display: grid;
    place-content: center;
    background-color: #1e89eb;
    border: #4da2ef;
    border-radius: 14px;
    color: white;
    margin-left: 5px;
    z-index: 5;
}

.top .content .roles .role-2 {
    height: 55%;
    width: 42%;
    display: grid;
    place-content: center;
    background-color: #9b59b6;
    border: #b07cc6;
    border-radius: 14px;
    color: white;
    margin-left: 5px;
    z-index: 5;
}

.top .content .description {
    display: flex;
    justify-content: center;
    z-index: 5;
    padding: 1rem;
}

.top .content .description .content-des {
    background-color: rgba(0, 0, 0, 0.4);
    color: white;
    border-radius: 14px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 12px;
    z-index: 5;
    text-align: center;
    padding: .35rem 2.5rem;
}

.top .banner {
    position: absolute;
    top: 0;
    height: 300px;
    width: 100%;
    z-index: -1;
    background: #313742;
}

.top .banner img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.bottom {
    height: 100%;
    font-size: 80%;
    background: #313742;
}

.bottom .content-mid {
    display: flex;
    align-items: center;
}

.bottom .content-mid .stat-value {
    display: flex;
    align-items: end;
    justify-content: center;
    flex-direction: column;
    height: 100%;
    color: white;
    font-weight: 600;
}

.bottom .content-mid .stat-value input {
    background: transparent;
    border: none;
    text-align: end;
    color: white;
    width: 100%;
}

.bottom .content-mid .stat-value input:focus {
    outline: none;
}

.bottom .content-mid .title-stat {
    display: flex;
    justify-content: center;
    align-items: start;
    flex-direction: column;
    height: 100%;
    color: #a7b0c3;
    font-weight: 100;
}

.bottom .content-mid .title-stat span {
    margin: 2px 0;
}

.bottom .content-bottom {
    padding: 0 10px 10px 10px
}

.bottom .content-bottom input {
    background: transparent;
    border: none;
    color: white;
}

.bottom .content-bottom input:focus {
    outline: none;
}

.title {
    color: #a7b0c3;
}

.value {
    color: white;
}

